--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.2.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-sticky-el": "^2.0.5",
