--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "^17.0.1",
     "react-alice-carousel": "^2.2.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-sticky-el": "^2.0.5",
+    "react-typed": "^1.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
